# fun_things

./: .gitignore  .gitignore~  README.md  hello.py  manage.py  package-lock.json  package.json  pyproject.toml
experiments/20250204_jackie_testrecs/: test_recs.py
fun_things/: asgi.py  settings.py  urls.py  wsgi.py
fun_things/core/: apps.py  models.py  recommenders.py  serializers.py  utils.py  views.py
fun_things/core/migrations/: 0001_initial.py  0002_npsthingtodo_location.py  0002_remove_npsthingtodo_location.py  0003_npsthingtodo_location.py  0003_remove_npsthingtodo_activities_and_more.py  0004_remove_npsthingtodo_age_recommendation.py  0004_remove_npsthingtodo_location.py  0005_customuser.py  0005_npsthingtodo_nps_id.py  0006_npsthingtodo_submitter.py  0006_remove_customuser_city_remove_customuser_latitude_and_more.py  0007_remove_npsthingtodo_submitter_and_more.py  0008_alter_npsthingtodo_nps_id.py  0009_remove_npsthingtodo_accessibility_and_more.py  0010_npsthingtodo_passes_qc.py
fun_things/frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
fun_things/frontend/app/: globals.css  page.tsx
fun_things/frontend/app/add_content/: page.tsx
fun_things/frontend/app/components/: AddContent.tsx  FirebaseAuth.tsx  MiniActivityCard.tsx  Profile.tsx  Register.tsx  ThingCard.tsx
fun_things/frontend/app/home/: page.tsx
fun_things/frontend/app/hooks/: useGoogleMaps.ts  useImageUpload.ts  useUserLocation.ts
fun_things/frontend/app/profile/: page.tsx
fun_things/frontend/app/utils/: apiRequests.ts  firebase.ts  (+3 more)
